--- a/src/Component/Card.css
+++ b/src/Component/Card.css
@@ -13,10 +13,17 @@
     gap:20px;
     grid-template-columns: repeat(3, 1fr);
 }
-
 .card-img img{
     width: 260px;
     height: 250px;
     padding: 10px;
     border-radius: 20px;
+}
+.icon{
+    font-size: 24px;
+}
+@media screen and (max-width: 600px){
+    .product-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
