--- a/src/Component/Card.css
+++ b/src/Component/Card.css
@@ -35,3 +35,10 @@
     font-size: 24px;
     color: red;
 }
+
+
+/* বিষয়টা সিম্পল, আপনি একটু গুগলে সার্চ করেন, random number between 2 digits in JavaScript.
+
+ঐখানে স্টার্টিং নম্বর টা হবে জিরো, এন্ডিং টা স্টেট এর এরে এর লেংথ এর চেয়ে 1 কম। এবার একটা নম্বর জেনারেট করে , এরে থেকে সেই ইনডেক্স এর এলিমেন্ট টা আপনি দেখাবেন UI তে কোনো একটা জায়গায়। এটা আপনার ডিসিশন কিভাবে কোথায় দেখাবেন, জাস্ট বিষয়টা যাতে দেখতে সুন্দর হয় সেটা মাথায় রাখবেন। এটা আপনার প্রজেক্ট গুলোর জন্য ভালো হবে ।
+Programming Hero21:26
+elem = cart[indexnumbner] */
