--- a/src/Component/Card/Product/Shop/Shop.css
+++ b/src/Component/Card/Product/Shop/Shop.css
@@ -17,7 +17,6 @@ body{
     min-height: 50px;
     margin-top: 80px;
     border-radius: 20px;
-    position: sticky;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow:  10px 10px 20px #bebebe,
              -10px -10px 20px #ffffff;
@@ -35,17 +34,14 @@ body{
     padding: 5px;
     border: none;
     border-radius: 5px;
+    transition: .5s;
 }
 .info-btn:hover{
     background-color: #fd79a8;
 }
 
 @media screen and (max-width: 600px){
-    .product-container{
-        grid-template-columns:  1fr;
-    }
-    /* .item-container{
-
+    .shop-container{
         grid-template-columns: 1fr;
-    } */
+    }
 }
